  o The "Play" shortcut will always play, regardless of whether it was already playing or not. There is a new shortcut for "Stop".
  o Styles for line start/end markers have changed.
  o Holding down ctrl lets you retime the original line while in Karaoke mode.
- Support reading SSA/ASS files with intermixed V4 and V4+ Styles sections. (jfs)
- Fixed loading of sections with unexpected cases. (AMZ)
- Plain-text export (jfs)
- The style of the current line is automatically selected when opening the Style Manager (jfs)
- Added long-missing Edit buttons in Style Manager (jfs)
- Various fixes to better handle paths/file names with non-ANSI characters on Windows (jfs/AMZ)
- Video display fixed on Linux and maybe also Mac (Azzy)
- Misc. fixes for building on Linux (Azzy)
- libass support for subtitles on UNIX (Azzy)
- Redesigned the FexTracker configuration window (jfs)
- Framegrabs from the video now also includes framenumber in the filename (jfs)
- Scrollbar in main subs grid didn't always allow scrolling through all the subs (jfs)
- You can now no longer create a style storage whose name is invalid as a filename, instead the illegal characters are replaced with a safe character and a warning is displayed (jfs)
  o Previously those storages seemed to be created correctly, but were never written to disk and thus lost
- Added a "Auto Save on Every Change" option to config.dat (default false), that automatically saves the files whenever you change anything. (AMZ)
- Added support for reading ASS, SSA and SRT softsubs directly from Matroska files. (AMZ)
- Fixed line selection after pasting. (AMZ)
- Times can now be copy and pasted with ctrl+c and Ctrl+V, as well as from context menu, in the time edit boxes. (AMZ)
- Plain-text lines can now be pasted into the grid. They will be inserted as default lines with the text as their content. (AMZ)
- Added Paste Over function, which allows you to paste subtitle lines over others, overwriting the fields of your choice. (AMZ)